--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.0",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "^15.3.0",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recharts": "^2.14.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^2.5.4",
